fix visited link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-- <div class="demo">
                     <iframe class="video video__demo"  src="https://www.youtube.com/embed/kY4HIqruY0E?si=G7Lw8_zai648uIoG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div> -->
-                <video class="video video__demo" src="video/AI-Intern-Demo.mp4" autoplay controls></video>
+                <div class="video"><video class="video__demo" src="video/AI-Intern-Demo.mp4" controls autoplay></video></div>
                 <p>Why use AI Interns?
                     <ul>
                         <li><span class="bold">Reduced costs</span>: Save time and resources around customer acquisition, retention, and support.</li>
